--- a/bai4-css/baitap3.html
+++ b/bai4-css/baitap3.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+            background-image: url(../pic/sky-space-dark-galaxy.jpg);
+        }
         h2 {
             color: rgb(226, 53, 14);
             text-align: center;
