--- a/bai4-css/index.html
+++ b/bai4-css/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <style>
-        p{
+        p {
             color: blueviolet;
+        }
+
+        .container {
+            width: 200px;
+            height: 20px;
+            position: relative;
+        }
+
+        .material-symbols-outlined {
+            position: absolute;
+            top: 0;
+            right: 0;
+
         }
     </style>
 </head>
+
 <body>
     <!--
     css: cascadinh style sheets 
@@ -30,10 +47,24 @@
 
     *thêm !IMPORTANT vào sau nd css muốn ưu tiên nhất
     display: block/inline/inline-block
+
+
+
 -->
-<p style="color: red;">hiii</p>
+    <!-- <p style="color: red;">hiii</p>
 <p>hello</p>
 <h3>botanical life</h3>
-<h3>botanical life</h3>
+<h3>botanical life</h3> -->
+
+    <label for="">Username:</label>
+    <div class="container">
+        <input class="container" type="text">
+        <div>
+            <span class="material-symbols-outlined">
+                visibility
+            </span>
+        </div>
+    </div>
 </body>
+
 </html>
