--- a/bai6-jsbasic/baitap/bai5/bai5.4.html
+++ b/bai6-jsbasic/baitap/bai5/bai5.4.html
@@ -25,6 +25,18 @@
         // undefined
         console.log(1 && null && 12 && NaN); 
         // null
+        console.log(null??0);
+        console.log(text);
+        var text ="hello"
+        let i=7
+        let r=--i + i++*5-i++ +i;
+        console.log(r);
+        var a=1,b=2;
+        {
+            let a=5;
+            const b=10;
+        }
+        console.log(a);
     </script>
 </body>
 
