--- a/bai6-jsbasic/baitap/bai5/bait5.1.html
+++ b/bai6-jsbasic/baitap/bai5/bait5.1.html
@@ -17,19 +17,23 @@ console.log(a!=b);  console.log(a!==b); -->
 
 // Toán tử "===": So sánh giá trị và kiểu dữ liệu của hai biến.;
 let a = 5;
-let b= “5”;
+let b= "5";
+
 console.log(a==b); 
 // So sánh giá trị của a và b. 
-// JavaScript thực hiện chuyển đổi kiểu dữ liệu tự động và so sánh giá trị bằng nhau, nên kết quả là true.
+//  so sánh giá trị bằng nhau, nên kết quả là true.
  console.log(a===b);
 //  So sánh giá trị và kiểu dữ liệu của a và b. 
 // Vì a là một số và b là một chuỗi, kiểu dữ liệu không giống nhau, nên kết quả là false.
 console.log(a!=b); 
 // So sánh giá trị của a và b. 
-// JavaScript thực hiện chuyển đổi kiểu dữ liệu tự động và so sánh giá trị khác nhau, nên kết quả là false.
+// thực hiện chuyển đổi kiểu dữ liệu tự động và so sánh giá trị khác nhau, nên kết quả là false.
  console.log(a!==b);
 //  So sánh giá trị và kiểu dữ liệu của a và b. 
 // Vì a là một số và b là một chuỗi, kiểu dữ liệu không giống nhau, nên kết quả là true.
+var text;
+console.log(text);
+text="hello"
     </script>
 </body>
 </html>
