--- a/bai6-jsbasic/lythuyet/operators-toán tử.html
+++ b/bai6-jsbasic/lythuyet/operators-toán tử.html
@@ -15,6 +15,19 @@
         3.toán tử logic :||(hoặc), &&(và), !(phủ định)
 
         4.toán tử so sánh : ==(bằng), === (bằng gtri và dữ liệu),>,< >=,<=
+        
+        != khác nhau 
+        !==khác giá trị và kiểu dữ liệu
+        ! phủ định:
+
+        ?? toán tử nullish
+        kiểu tra xem có phải là null hoặc undefined
+         nếu phải thì lấy thằng bên cạnh .Nếu không phải thì trả về thằng còn bên trái
+        console.log (null ?? 0)
+        -> 0
+        console.log("5"??6)
+        ->"5"
+    
 
         *****************
         WINDOW-DOM METHOD: CÁC PHƯƠNG THỨC CÓ SẴN
