--- a/bai6-jsbasic/lythuyet/operators-toán tử.html
+++ b/bai6-jsbasic/lythuyet/operators-toán tử.html
@@ -27,7 +27,22 @@
         -> 0
         console.log("5"??6)
         ->"5"
+
+        FALSY
+        -Nan,null,underfined,0,"",false
+        TRUTHY
+        -ko phải falsy大阪
+
+        đối với dạng có dấu || thì sẽ lấy truthy đầu tiên
+        nếu ko có truthy nào thì lấy cuối cùng.
+
+        đối với dạng && thì sẽ lấy falsy đầu tiên
+        nếu ko có falsy nào thì lấy cuôis cùng
     
+        ***
+        template literial
+        dấu ``
+        console.log(`${a}`)
 
         *****************
         WINDOW-DOM METHOD: CÁC PHƯƠNG THỨC CÓ SẴN
