--- a/bai7-điều kiện và vòng lặp/baitap/baitap8.html
+++ b/bai7-điều kiện và vòng lặp/baitap/baitap8.html
@@ -16,7 +16,7 @@ bmi = weight / ( height ^ 2 );
     <script>
         let weight = +prompt("hãy nhập cân nặng của bạn!");
         let height = +prompt("hãy nhập chiều cao của bạn!(0.00cm)");
-        let bmi = weight / (height * 2);
+        let bmi = weight / (height * height);
 
         console.log(bmi);
         if(bmi < 18.5) {
