--- a/bai7-điều kiện và vòng lặp/baitap/baittap10.html
+++ b/bai7-điều kiện và vòng lặp/baitap/baittap10.html
@@ -13,7 +13,7 @@ Ví dụ : Người dùng nhập vào số 7 thì in ra tháng 7 có 31 ngày.
  -->
     <script>
         let month = +prompt("hãy nhập số tháng(1-12)");
-        if (month === 1 || month == 3 || month === 5 ||
+        if (month === 1 || month === 3 || month === 5 ||
             month === 7 || month === 8 || month === 10 || month === 12) {
             console.log(`tháng ${month} có 31 ngày`);
 
