--- a/bai7-điều kiện và vòng lặp/lý thuyết/cau điều kiện.html
+++ b/bai7-điều kiện và vòng lặp/lý thuyết/cau điều kiện.html
@@ -64,5 +64,11 @@ let text = +prompt("mời bạn nhập ngày trong tuần")
             console.log("ngày nhập k hợp lệ");
             break;
     }
+// let count=0;
+// while(count++<1){
+//     count++;
+// }
+// console.log(count);
+
 </script>
 </html>
