--- a/bai7-điều kiện và vòng lặp/lý thuyết/Loop(vòng lặp).html
+++ b/bai7-điều kiện và vòng lặp/lý thuyết/Loop(vòng lặp).html
@@ -56,11 +56,23 @@
     }
 
     // DO-WHILE
-    let j=1
+    let j=0
     do {
-        console.log(j);
-        j++
-    } while (j<=5);
+        j++;
+    } while (j++<10);
+    console.log(j);
+
+    let a=0
+    for (let i =0;i<5;i++) {
+        a+=i ;
+        
+    }
+    console.log(a);
+
+    for (let i = 0; i < 5; i++){
+        console.log(i);
+    }
+
 </script>
 </body>
 </html>
