--- a/bai6-jsbasic/lythuyet/index.html
+++ b/bai6-jsbasic/lythuyet/index.html
@@ -14,12 +14,18 @@
         c1:Inline:viết code trực tiếp trong thẻ HTML
         C2:Internal viết code trong căjp thẻ script(đặt cặp thẻ script phải ở cuối body)
         c3:external tạjo file có đuôi .js roòi viết code trong file đó
+
+        muốn hiển thị nội dung xuống dòng ở trang dùng <br>
+        document.write(i);
+        document.write("<br>")
+
      -->
 
      <button onclick="alert('hello học viên fukuoka tháng 11')">click </button>
 
      <script>
         // alert("hello mọi người")
+        
      </script>
      <script src="./index.js"></script>
 </body>
