--- a/bai7-điều kiện và vòng lặp/baitap2/bai4.html
+++ b/bai7-điều kiện và vòng lặp/baitap2/bai4.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <!-- Viết chương trình in ra 15 số đầu tiên trong dãy Fibonaci -->
     <script>
-      
+        let x = 0;
+        let y = 1;
 
+        for (let i = 1; i <= 15; i++) {
+            let c = x + y;
+            x = y;
+            y = c;
+            console.log(x);
+        }
         
+
+
 
     </script>
 </body>
+
 </html>
