--- a/bai7-điều kiện và vòng lặp/baitap2/bai5.html
+++ b/bai7-điều kiện và vòng lặp/baitap2/bai5.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- In tam giác vuông. Các góc vuông nằm ở các vị trí khác nhau -->
     
 </body>
 </html>
