--- a/bai7-điều kiện và vòng lặp/baitap2/bai6.html
+++ b/bai7-điều kiện và vòng lặp/baitap2/bai6.html
@@ -17,7 +17,7 @@
         //  Tổng các ước này = 6.
          -->
     <script>
-        let n = parseInt(prompt("nhap so nguyen bat ki"))
+        let n = +prompt("nhap so nguyen bat ki");
         let sum = 0
         for (i = 1; i < n; i++) {
             if (n % i == 0) {
