--- a/bai10-Function/baitap/bai2.html
+++ b/bai10-Function/baitap/bai2.html
@@ -19,7 +19,7 @@
                 console.log(`${n} không phải là số nguyên tố`);
                 return;
             }
-            for (let i = 2; i <= n/2; i++) {
+            for (let i = 2; i <= n-1; i++) {
                 if (n % i === 0) {
                     console.log(`${n} không phải là số nguyên tố`);
                     return;
